# API-workshop-jupyter-ao-deploy

./: .gitignore  main.py  pyproject.toml  requirements-dev.txt  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
